# rust-axum-auth-example

./: .gitignore  Cargo.toml  LICENSE  README.md  licenses.txt  users.txt
.github/workflows/: rust.yml
src/: error.rs  handlers.rs  main.rs  models.rs  sha2_manual.rs  user_data.rs
templates/: dashboard.html  error.html  login.html
